--- a/src/multiview/layout/databox/index.css
+++ b/src/multiview/layout/databox/index.css
@@ -7,6 +7,11 @@
 :root {
     --list-vertical-padding: calc(0.5 * var(--unit));
     --list-item-max-height: calc(3.0 * var(--unit));
+    --btndiv-height: 25.83px;
+    --seldiv-height: 30.99px;
+    --rest-height: calc(100% - var(--seldiv-height) - var(--btndiv-height));
+    --listdiv-height: calc(0.65 * var(--rest-height));
+    --infodiv-height: calc(0.35 * var(--rest-height));
 }
 
 
@@ -29,4 +34,22 @@
     max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.btndiv {
+    height: var(--btndiv-height); 
+}
+
+.seldiv {
+    height: var(--seldiv-height);
+}
+
+.listdiv {
+    height: var(--listdiv-height);
+    overflow-y: scroll;
+}
+
+.infodiv {
+    height: var(--infodiv-height);
+    padding: 5px;
 }
