--- a/docs/lib/app/multiview/index.css
+++ b/docs/lib/app/multiview/index.css
@@ -70,10 +70,11 @@
 .chartbox {
     background: var(--color-background);
     padding: 0px 0px 0px 0px;
-    position: fixed;
+    position: absolute;
     left: 0;
     top: calc(var(--appbar-height) + var(--toolbox-height));
     width: 100%;
     font-family: var(--preferred-font);
     font-size: var(--font-size);    
+    overflow-y: scroll;
 }
