add draggableDataBox component
this is to show image and information of selected items in scatter view

--- a/docs/lib/app/multiview/index.css
+++ b/docs/lib/app/multiview/index.css
@@ -2,6 +2,10 @@
 @import 'variables.css';
 @import 'app_bar/config.css';
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 :root {
     --unit: '6.5px';
     --appbar-color: var(--palette-grey-400);
