--- a/docs/lib/app/multiview/index.css
+++ b/docs/lib/app/multiview/index.css
@@ -81,3 +81,35 @@
     font-family: var(--preferred-font);
     font-size: var(--font-size);    
 }
+
+@keyframes progressAnimation {
+    from {background-color: rgb(255, 0, 0)}
+    to {background-color: rgb(0, 0, 255)}
+}
+
+.myProgressBarWithAnimation {
+    position: 'absolute';
+    left: 0%;
+    width: 100%;
+    height: 2px;
+    z-index: 1000;
+    background-color: rgb(255, 0, 0);
+    animation-name: progressAnimation;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+.myProgressBar {
+    position: 'absolute';
+    left: 0%;
+    width: 40px;
+    height: 2px;
+    z-index: 1000;
+    background-color: rgba(255, 0, 0, 0);
+}
+
+.hLi {
+    font-size: 11px;
+    display: inline;
+}
