--- a/markedStyle.css
+++ b/markedStyle.css
@@ -318,3 +318,14 @@ Download @font-face kits from <http://www.fontsquirrel.com/fontface>. Woff versi
           .inverted #wrapper table tbody tr:nth-child(odd) {
             background-color: rgba(255, 255, 255, 0.1); } }
   
+
+<style>
+figure {
+    display: table;
+}
+figcaption {
+    display: table-caption;
+    caption-side: bottom;
+}
+</style>
+        
