--- a/app/src/views/components/index.css
+++ b/app/src/views/components/index.css
@@ -40,3 +40,15 @@
     padding: 0px 5px 0px 5px;
     margin-bottom: 5px;
 }
+
+.rowC {
+    display: flex;
+    flex-direction: row;
+}
+
+.col3 {
+    display: inline-block;
+    width: 33.3%;
+    height: 300px;
+}
+
